Updating profile for Wilco Burggraaf

--- a/src/content/champions/wilco-burggraaf.yaml
+++ b/src/content/champions/wilco-burggraaf.yaml
@@ -6,7 +6,7 @@ languages:
   - English
   - Dutch
 pronoun: He/Him
-country: The Netherlands
+country: Netherlands
 city: Rijen
 bio: |
  Wilco Burggraaf, Lead Green Practitioner & Green Architect @ HighTech Innovators, Wilco brings over 20 years of software development experience to the table (mainly C#), having thrived in diverse roles – developer, architect, requirements engineer, data migration specialist, agile tester, and IT management advisor. A passionate advocate for green coding, Wilco is actively engaged in promoting sustainable software practices.
