updating linkedin for Daniel Vaughan

--- a/src/content/champions/daniel-vaughan.yaml
+++ b/src/content/champions/daniel-vaughan.yaml
@@ -11,7 +11,7 @@ bio: Daniel Vaughan is a Cloud Native Architect and Green Software Foundation Co
 type: normal
 social:
   github: danielvaughan
-  linkedin: danielvaughan
+  linkedin: https://www.linkedin.com/in/danielpvaughan/?originalSubdomain=uk
   twitter: danielvaughan
   website: https://medium.com/@danielvaughan
 activities:
