--- a/src/content/champions/jan-hendrik-kuperus.yaml
+++ b/src/content/champions/jan-hendrik-kuperus.yaml
@@ -7,7 +7,7 @@ languages:
   - Dutch
   - Frisian
 pronoun: He/Him
-country: Netherlands
+country: The Netherlands
 city: Utrecht
 bio: |
  Jan-Hendrik is a software engineer that founded Yoink, which is a software development and consulting company for developers that share his passion for a more sustainable world.
