--- a/src/content/champions/saravanan-nagarajan.yaml
+++ b/src/content/champions/saravanan-nagarajan.yaml
@@ -4,7 +4,7 @@ role: Architect
 organization: Rabobank
 languages: 
   - English
-country: Netherlands
+country: The Netherlands
 bio: |
  I am an Architect working for Rabobank, Netherlands and one of the leads in the Growing Greener (Sustainability) community in the bank. 
 
